[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rebecca"
version = "0.0.1"
description = "Python Algorithm Visualization Library"
authors = ["yejin park <o0o2211915@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
