[tool.poetry]
name = "rebecca"
version = "0.1.0"
description = "Python Algorithm Visualization Library"
authors = ["98yejin <o0o2211915@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
